lang/lc/tests/err_undefined_type.sys
type boo = moo;
attribute zoo foo;
